# Data-Science

./: .gitignore  pyproject.toml
Modelagem-de-Series-Temporais/: .editorconfig  .gitignore  README.md  pyproject.toml
Modelagem-de-Series-Temporais/P01-Processo-de-Analise/: README.md
Modelagem-de-Series-Temporais/P01-Time-Series-Active-Users-Forecast/: .gitignore  requirements.txt
Modelagem-de-Series-Temporais/P01-Time-Series-Active-Users-Forecast/docs/: P01-Tarefa01.html  P01-Tarefa03.html  index.html
Modelagem-de-Series-Temporais/P01-Time-Series-Active-Users-Forecast/notebooks/: P01-01-exploracao-e-decomposicao.ipynb  README.md
Modelagem-de-Series-Temporais/P01-Time-Series-Active-Users-Forecast/src/: README.md  plot_functions.py
Modelagem-de-Series-Temporais/_archive/2026-02-23-pre-dx-reset/: main.py
Modelagem-de-Series-Temporais/_archive/notebooks_bkp/: P01-01-exploracao-e-decomposicao.ipynb  P01-02-estatisticas-e-estacionariedade.ipynb  P01-03-transformacoes-de-serie.ipynb  Projeto1-Tarefa3-Copy1.ipynb
Modelagem-de-Series-Temporais/projects/P01-time-series-active-users-forecast/: README.md
Modelagem-de-Series-Temporais/projects/P02-prever-usuarios-ativos-web-site/: LEIAME.txt  README.md  requirements.txt
Modelagem-de-Series-Temporais/scripts/: doctor.ps1  export_p01_html.ps1
Modelagem-de-Series-Temporais/tests/: test_smoke.py
PDX01-People-Analytics-RH-CRM/: README.md  README_01.md  main.py  pyproject.toml  requirements.txt
PDX01-People-Analytics-RH-CRM/artifacts/: kmeans.pkl  pca.pkl  preprocessor.pkl
PDX01-People-Analytics-RH-CRM/data/interim/: rh_joined.csv
PDX01-People-Analytics-RH-CRM/data/processed/: X_model.parquet  rh_with_clusters.csv  y.parquet
PDX01-People-Analytics-RH-CRM/data/raw/: dicionario_de_dados.xlsx  tb_crm_clientes.csv  tb_rh_funcionarios.csv  tb_rh_pesquisa_funcionarios.csv  tb_rh_pesquisa_gestores.csv
PDX01-People-Analytics-RH-CRM/notebooks/: 01_busisness_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_modeling_rh_attrition.ipynb  04_modeling_rh_personas.ipynb  05_modeling_attrition_probabilidade.ipynb  PROJETO_RH_AULA_002.ipynb
PDX01-People-Analytics-RH-CRM/notebooks/bkp/: 02_data_understanding.ipynb.bkp
docs/: index.html
oci-daac-architecture/: .gitignore  README.md  estrutura.txt  main.py  pyproject.toml
oci-daac-architecture/diagrams_src/logical/: hackathon_functional.py  hackathon_logical.py  hackathon_logical_oci.py
oci-daac-architecture/diagrams_src/physical/: hackathon._physical.py  hackathon_medallion_detail.py  hackathon_physical_a.py  sample-oci.py
oci-daac-architecture/docs/: readme.txt
oci-daac-architecture/docs/lakehouse-architecture-oracle/: lakehouse-architecture.drawio
oci-daac-architecture/docs/lakehouse-functional-oracle/: lakehouse-functional.drawio
oci-daac-architecture/scripts/: install-graphviz.ps1
oci-daac-architecture/src/: test_diagram.py
podbank-credit-score/: .gitignore  estrutura.txt  pyproject.toml
podbank-credit-score/docs/00-contexto/: Aula--04-----Códigos.rar
podbank-credit-score/docs/03-notebooks/: Modelo_baseline.ipynb  bureau_balance_feature_engineering.ipynb  credit_card_balance_feature_engineering.ipynb  installments_feature_engineering.ipynb  pos_cash_feature_engineering.ipynb
podbank-credit-score/scripts/: 02-bronze.ps1
projeto_prf_eda/: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  tasks.ps1
projeto_prf_eda/.streamlit/: config.toml
projeto_prf_eda/app/: main.py  requirements.txt
projeto_prf_eda/scripts/: prepare_data.py  run_app.py
(+101 files in other folders)
