[project]
name = "pdx01-people-analytics-rh-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "polars>=1.38.0",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "yellowbrick>=1.5",
]
