[project]
name = "podbank-credit-score"
version = "0.1.0"
description = "PoD Bank Credit Score (CRISP-DM + DX), DuckDB-led pipeline"
requires-python = ">=3.12,<3.14"
dependencies = [
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "polars>=1.0.0",
  "matplotlib>=3.8.0",
  "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "jupyterlab>=4.2.0",
  "ipykernel>=6.29.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100