[project]
name = "projeto-prf-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
        "streamlit==1.43.2",
        "duckdb==1.2.1",
        "polars==1.24.0",
        "plotly==5.24.1",
        "pandas==2.2.3",
        "pyarrow==19.0.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    "projeto_prf_eda",
]

[tool.setuptools]
py-modules = []

